cmake_minimum_required(VERSION 2.8.9)
project (Lab1)

set(CMAKE_INSTALL_RPATH "$ORIGIN")
SET(CMAKE_EXE_LINKER_FLAGS
          "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath -Wl,$ORIGIN")
set( CMAKE_SKIP_BUILD_RPATH true )
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) 

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_PATH ${CMAKE_SOURCE_DIR}/lib)

set(SOURCE_FILES 
	${PROJECT_SOURCE_DIR}/src/main.c
	${PROJECT_SOURCE_DIR}/src/bee-map.c)

add_executable(lab1 ${SOURCE_FILES})
